--- a/cassandra_nodetool/tox.ini
+++ b/cassandra_nodetool/tox.ini
@@ -2,7 +2,7 @@
 minversion = 2.0
 basepython = py37
 envlist =
-    py{27,37}-{2.1,unit}
+    py{27,37}-{2.1,3.0,unit}
     flake8
 
 [testenv]
@@ -13,6 +13,7 @@ deps =
     -rrequirements-dev.txt
 setenv =
     2.1: CASSANDRA_VERSION=2.1.14
+    3.0: CASSANDRA_VERSION=3.0
     CONTAINER_PORT=7199
 passenv =
     DOCKER*
@@ -20,8 +21,8 @@ passenv =
     JMX_*
 commands =
     pip install -r requirements.in
-    2.1: pytest -m"integration" -v
-    unit: pytest -m"not integration" -v
+    {2.1,3.0}: pytest -m"integration" -v {posargs}
+    unit: pytest -m"not integration" -v {posargs}
 
 [testenv:flake8]
 skip_install = true
